Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110898

Window disappears when monitor is disconnected

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.5.1, 6.5.9, 6.6.0, 6.8.2, 6.9.0 FF
    • 6.4.2
    • QPA: X11/XCB
    • None
    • Linux/gentoo, X11, nvidia videocard.
    • Linux/X11
    • 2b94453cb (dev), 8716a1508 (6.5), c8e20cbde (6.4), 64590233a (dev), 45b33133c (dev), 2b3d867d9 (6.8), b63cceb1b (6.8), 8795c9603 (tqtc/lts-6.5), a29556b23 (tqtc/lts-6.5)

    Description

      The window of application disappears after monitor output is turned off/on.

      The app is running on the 2nd monitor, on the separate X11 screen.

      To reproduce the issue:

      xrandr -d :0.0  --output DP-0 --off; sleep 1; xrandr -d :0.0 --auto

      (assuming window is running on X11 DISPLAY :0.0 and physical output is DP-0)

      The process remains, X11 window disappears ('wmctl -l' doesn't show this window).

      The original application was Telegram-desktop (statically linked with Qt-6.4.2),

      but I was able to reproduce the issue using

      qt-everywhere-src-6.4.2/qtbase/examples/widgets/painting/basicdrawing;

      Applications linked with Qt5 are not affected.

      For example, running Okular linked against dev-qt/qtcore-5.15.8-r1 does NOT demonstrate the issue.

      Xorg.log during switching:

      372776.380] (II) NVIDIA(0): Setting mode "NULL"
      [372777.479] (II) NVIDIA(0): Setting mode "DP-0: nvidia-auto-select @1920x1200 +0+0 {AllowGSYNC=Off, ViewPortIn=1920x1200, ViewPortOut=1920x1200+0+0}"

       

      Note: the issue is 100% reproducible, feel free to ask for more information, if needed.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              liaqi Liang Qi
              vl409 VL
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: