xcb: ignore the xscreens which don't belong to current connection

This amends 9a4c98e55659b32db984612e6247ac193812a502.

When a X server has multiple xscreens, for example, ":0.0" and ":0.1",
a Qt application, which uses ":0.1" as display, can't use the randr
monitor from other connection(":0.0") to show contents there. Then
we don't need to generate QXcbScreen for them.

Fixes: QTBUG-110898
Change-Id: I04c1512664b763ffabb55b75db4411d100536255
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
Reviewed-by: JiDe Zhang <zhangjide@uniontech.com>
Reviewed-by: Liang Qi <liang.qi@qt.io>
(cherry picked from commit 2b94453cbdab5c691c830ff539e81408d5330e3b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>